--- a/05_flow_solver_with_AD.tex
+++ b/05_flow_solver_with_AD.tex
@@ -1,26 +1,26 @@
 \chapter{Flow Solver With Automatic Differentiation}
 \label{ch:FlowSolver}
-To compare the different AD implementations in Julia and MATLAB I have implemented MRST's tutorial, "Single-phase Compressible AD Solver" from \texttt{flowSolverTutorialAD.m} \emph{\citep{flowSolverADExample}}, in Julia. The example is made as an introduction to how AD can be used in MRST, hence it is a good example to use when the goal is to compare the implementation of AD in MATLAB and Julia. 
+To compare the different AD implementations in Julia and MATLAB I have implemented MRST's tutorial, "Single-phase Compressible AD Solver" from \texttt{flowSolverTutorialAD.m} \emph{\citep{flowSolverADExample}}, in Julia. The example is made as an introduction to how AD can be used in MRST, hence it is a good example to use when the goal is to compare the implementations of AD in MATLAB and Julia. 
 
 \section{Grid Construction}
 \label{sec:GridConstruction}
 The example consist of modelling how the pressure drops within a rectangular reservoir measuring $200\times 200 \times 50 \text{m}^3$ when we have a well that is producing oil. As mentioned in the introduction, this is called primary production, and because of high pressure in the reservoir, the oil flows out by itself. "Single-phase solver" only means that we do not have different phases of fluids, like water and/or gas, present during the simulation. In this simulation we assume there is only oil present in the reservoir. As the main purpose of this example is to compare the AD tools in MATLAB and Julia, and not the process of solving the problem, including setting up the grid and other necessary variables, some of the initialization and plotting have been performed in Julia by calling code from MRST. This has been done by using the package MATLAB.jl \emph{\citep{MATLAB.jl}}. This package allows calling MATLAB functions from Julia and retrieve the output variables. This is done by the function call
 \lstinputlisting{code/mxcall.jl}
-where we have three input parameter and two output parameters. We have to specify the number of output parameters after the MATLAB function name.  By calling MATLAB from Julia, we can use MRST's \texttt{G = computeGeometry(...)} function to set up the grid for the simulation. The grid of the reservoir can be seen in \autoref{fig:flowSolverGrid}. The variable \texttt{G} that contains the grid properties is now a structured array (struct), having all the information on cells, facets, vertices and nodes that we need to make the discrete divergence and gradient operators as explained in \autoref{sec:ApplicationsAD}. 
+where we have three input parameter and two output parameters. We have to specify the number of output parameters after the MATLAB function name.  By calling MATLAB from Julia, we can use MRST's \texttt{G = computeGeometry(...)} function to set up the grid for the simulation. The grid of the reservoir can be seen in \autoref{fig:flowSolverGrid}. The variable \texttt{G}, that contains the grid properties, is now a structured array (struct), having all the information on cells, facets, vertices and nodes that we need to make the discrete divergence and gradient operators as explained in \autoref{sec:ApplicationsAD}. 
 
-Next, we define the properties of the rock. As explained in \autoref{sec:OilReservoirs}, in an oil reservoir, the oil lies inside porous rock and hence the properties of the rock will affect the flow of the oil. The amount of oil we can have inside the rock is measured as pore volume. First, we make a new variable \texttt{rock} that contains parameters that describe the rock's ability to store and trasmit fluids for each cell with the function \texttt{rock = makeRock(...)}. Then, we say that in our model the rock is compressed constantly as a function of pressure and we obtain the analytic solution for the pore volume as a function of pressure
+Next, we define the properties of the rock. As explained in \autoref{sec:OilReservoirs}, in an oil reservoir, the oil lies inside porous rock and the properties of the rock will affect the flow of the oil. The amount of oil we can have inside a cell is measured as pore volume and the ability to transmit fluids is given by the permeability. We start by making a new variable, \texttt{rock}, that contains the permeability and the porosity of the rock. The porosity is a number between zero and one, describing the porosity of the rock at a reference pressure. The amount of fluid inside a cell is given by the pore volume. To find an expression for this, we say that in our model the rock is compressed constantly as a function of pressure. This gives us an analytic solution for the pore volume, given as a function of pressure
 \begin{equation}
-    pv(p) = \text{pv}_r \exp[c_r\cdot(p-p_r)],
+    pv(p) = \text{pv}_r \exp[c_r\cdot(p-p_r)].
     \label{eq:poreVolume}
 \end{equation}
-where pv$_r$ is the rock pore volume properties, in a cell, at a reference pressure $p_r$. $c_r$ is a constant controlling how the rock is compressed. The pore volume of the rock as a function of pressure values are visualized in \autoref{fig:flowSolverPoreVolume}. The graph shows that for a cell with volume $1000\text{m}^3$ there is approximately room for $600\text{m}^3$ oil.
+In this expression, pv$_r$ is the rock pore volume, in a cell, at a reference pressure $p_r$. The value of pv$_r$ is given by the porosity of the rock, multiplied with the total volume of the cell. $c_r$ is a constant controlling how the rock is compressed. The pore volume of the rock, as a function of pressure values, are visualized in \autoref{fig:flowSolverPoreVolume}. The graph shows that for a cell with volume $2000\text{m}^3$ there is approximately room for $600\text{m}^3$ oil.
 
 Since we assume that the oil have a constant compressibility, the density of the oil is given as an analytic function of pressure 
 \begin{equation}
     \rho(p) = \rho_r\exp[c\cdot(p-p_r)],
     \label{eq:pressureSolverDensity}
 \end{equation}
-where $\rho_r = 850\text{kg}/\text{m}^3$ and $c$ is a constant controlling how fast the oil is compressed. The density of the oil as a function of pressure is plotted for some pressure values in \autoref{fig:flowSolverDensity}.
+where $\rho_r = 850\text{kg}/\text{m}^3$ is the reference density at the reference pressure p$_r$ and $c$ is a constant controlling how fast the oil is compressed. The density of the oil, as a function of pressure, is plotted for some pressure values in \autoref{fig:flowSolverDensity}.
 \begin{figure}[H]
     \centering
     \begin{subfigure}[t]{0.48\textwidth}
@@ -127,21 +127,26 @@ Note the different intervals for the color bar in \autoref{fig:flowSolverResult}
 
 \autoref{fig:flowSolverProduction} shows the development of the production rate and the average pressure inside the reservoir. We can see how the production rate follows the average pressure inside the reservoir, and that after some time it approaches zero. This is when primary production ends, as explained in \autoref{sec:OilReservoirs}, and we need to apply external pressure to continue production in secondary production. To do this in the best possible way, it is important to be able to simulate how the pressure evolves inside the reservoir so that we can make good decisions on which actions produce the best possible results and when to take these actions. This flow solver is a simple example of how we can model primary production in a reservoir elegantly with governing equations on residual form, created by discrete differentiation operators, and AD. A simulation of secondary production can be seen in \autoref{sec:TwoPhaseSimulation}.
 \begin{figure}[H]
+\centering
+\begin{minipage}{.47\textwidth}
     \centering
-    \includegraphics[width = 0.9\textwidth]{figures/flow_solver_production.eps}
-    \caption{The production rate and the average pressure in the reservoir as a function of time.}
+    \includegraphics[width=\linewidth]{figures/flow_solver_production.eps}
+    \captionof{figure}{The production rate and the average pressure in the reservoir as a function of time.}
     \label{fig:flowSolverProduction}
+\end{minipage}%
+\hfill
+\begin{minipage}{.47\textwidth}
+    \centering
+    \includegraphics[width=\linewidth]{figures/flowSolver_Jacobian.eps}
+    \captionof{figure}{Structure of the $1002\times 1002$ Jacobian of the governing equations. There are 6419 non-zero elements.}
+    \label{fig:flowSolverJacobian}
+\end{minipage}
 \end{figure}
 
 When it comes to solving the residual equations with the Newton-Raphson method, it is interesting to have a look at how the Jacobian of $\boldsymbol{F}$ looks like. \autoref{fig:flowSolverJacobian} shows the structure of this Jacobian. The first impression is that the matrix is very sparse. The reason for this is that each cell will only depend on its neighbouring cells. A small exception from this are the few cells containing the well. These cells will also depend on the bottom hole pressure. As there are only 6419 non-zero elements, out of more than 1 million matrix elements, it is clear that storing the full $1002\times 1002$ matrix will be very inefficient.
 
 As explained in \autoref{ch:Implementation}, the different types of AD mentioned store the Jacobians differently. Both \texttt{FAD}, \texttt{CJAD} and the two AD implementations in MRST, will, at least eventually, store the Jacobians as a list of sparse matrices where each Jacobian element in the list is the Jacobian with respect to one primary variable. In this example, this is a lot more efficient than storing the full $1002\times 1002$ Jacobian as  \texttt{ForwardDiff} does.
-\begin{figure}[H]
-    \centering
-    \includegraphics[width = 0.9\textwidth]{figures/flowSolver_Jacobian.eps}
-    \caption{Structure of the $1002\times 1002$ Jacobian of the governing equations. There are 6419 non-zero elements.}
-    \label{fig:flowSolverJacobian}
-\end{figure}
+
 \todo[inline]{Legg ved siden av figur over.}
 The difference in implementation of the Jacobian should make a big impact on the computation time for this problem. To benchmark the different methods, we need to do some extra work to make sure that it is actually the AD we benchmark and not other parts of the code. This is especially important for the code running in Julia, since when we call MATLAB from Julia it will be a lot of overhead. This means that the setup of the discrete gradient and divergence operators will take longer when done in MATLAB called from Julia, than when we do it directly in MATLAB. If we want to run the full simulation it is not possible to separate the AD part fully, but if we only benchmark the main-loop containing the Newton-Raphson method, AD will be a dominating part of the computations together with the linear solver \texttt{f.jac\textbackslash f.val}. This means that we at least will get an indication of how well the AD tools perform compared to each other. To see how the different methods scale as the discretization becomes finer and the system we solve grow, I have benchmarked three different discretizations. The first is the original setup with 10 cells in the spatial directions $x$, $y$, and $z$. This gives a total number of 1000 cells in the reservoir. Then, I have also tested the implementations for 20 and 30 cells in each spatial directions. The time spent solving the system for the different methods can be seen in \autoref{tab:FlowSolverSpeedTest}.
 \begin{table}[H]
