--- a/configurations/packages.sty
+++ b/configurations/packages.sty
@@ -23,7 +23,7 @@
 \pagestyle{fancy}
 \fancyhf{}
 \cfoot{\thepage}
-\restylefloat{figure}
+\restylefloat*{figure}
 
 \renewcommand{\chaptermark}[1]{\markboth{\chaptername\ \thechapter.\ #1}{\chaptername}}
 \renewcommand{\sectionmark}[1]{\markright{\thesection\ #1}}
